Hide battery bar preference for devices with a notch
Change-Id: Ic05a041bbf7815ff55c4b6869c6d0261a5f133c1

--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -83,7 +83,7 @@
             android:entryValues="@array/text_charging_symbol_values"
             android:defaultValue="0" />
 
-        <Preference
+        <PreferenceScreen
             android:key="batterybar_settings"
             android:title="@string/battery_bar_title"
             android:summary="@string/battery_bar_summary"
