GamingMode: Option to disable notification feedback [2/2]
Change-Id: I48b61ab40fff35b62c9c0b545fd9e09a7c386fa9

--- a/res/xml/gaming_mode_settings.xml
+++ b/res/xml/gaming_mode_settings.xml
@@ -41,6 +41,12 @@
         android:summary="%s"
         android:defaultValue="1" />
 
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+        android:key="gaming_mode_notifications_feedback"
+        android:title="@string/gaming_mode_notifications_feedback_title"
+        android:summary="@string/gaming_mode_notifications_feedback_summary"
+        android:defaultValue="true" />
+
     <!-- Hardware keys -->
     <com.bliss.support.preferences.SystemSettingSwitchPreference
         android:key="gaming_mode_hw_keys_toggle"
