QSFooter: Running Services toggle [2/2]
Change-Id: Ibd2a3e11cebaf2ac510b30e7913dfc916469e516
Signed-off-by: rohan <purohit.rohan@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -935,4 +935,9 @@
     <string name="vibrate_on_notifications_title">Notification vibration</string>
     <string name="vibrate_on_notifications_summary">Vibrate on notifications</string>
 
+    <!-- QS Running Services -->
+    <string name="qs_footer_options">Quick Settings Footer</string>
+    <string name="qs_services_toggle_title">Running Services icon</string>
+    <string name="qs_services_toggle_summary">Display Running Services icon in quick settings footer</string>
+
 </resources>
