--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -56,6 +56,23 @@
             android:defaultValue="0"
             android:dependency="status_bar_logo" />
 
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="status_bar_show_weather_temp"
+            android:title="@string/statusbar_weather_title"
+            android:dialogTitle="@string/statusbar_weather_dialog_title"
+            android:entries="@array/status_bar_weather_entries"
+            android:entryValues="@array/status_bar_weather_values"
+            android:summary="%s"
+            android:defaultValue="0" />
+
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="status_bar_show_weather_location"
+            android:title="@string/status_bar_weather_location_title"
+            android:entries="@array/status_bar_weather_location_entries"
+            android:entryValues="@array/status_bar_weather_location_values"
+            android:summary="%s"
+            android:defaultValue="0" />
+
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="bluetooth_show_battery"
             android:title="@string/bluetooth_battery_title"
