--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2014-2015 The CyanogenMod Project
+     Copyright (C) 2016-2019 crDroid Android Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -29,6 +30,18 @@
         android:title="@string/power_menu_screenshot_title"
         android:summary="@string/power_menu_screenshot_summary"
         android:defaultValue="false" />
+
+    <SwitchPreference
+        android:key="screenrecord"
+        android:icon="@drawable/ic_screenrecord"
+        android:title="@string/power_menu_screenrecord_title"
+        android:defaultValue="false" />
+
+    <!--<SwitchPreference
+        android:key="onthego"
+        android:icon="@drawable/ic_onthego"
+        android:title="@string/power_menu_onthego_title"
+        android:defaultValue="false" />-->
 
     <SwitchPreference
         android:key="airplane"
