--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -107,6 +107,12 @@
         android:key="qs_footer"
         android:title="@string/qs_footer_title" >
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="dismiss_all_button"
+            android:title="@string/enable_clear_all_button"
+            android:summary="@string/enable_clear_all_button_summary"
+            android:defaultValue="true" />
+
         <!-- QS footer text toggle -->
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="footer_text_show"
