--- a/res/xml/power_menu_settings.xml
+++ b/res/xml/power_menu_settings.xml
@@ -60,4 +60,22 @@
         android:key="power_menu_emergency_affordance"
         android:title="@string/power_menu_emergency_title"
         android:defaultValue="true" />
+
+    <PreferenceCategory
+        android:key="advanced_reboot_key"
+        android:title="@string/advanced_reboot_title" >
+
+        <lineageos.preference.LineageSecureSettingSwitchPreference
+            android:key="advanced_reboot"
+            android:title="@string/advanced_reboot_title"
+            android:summary="@string/advanced_reboot_summary"
+            android:defaultValue="true" />
+
+        <lineageos.preference.LineageSecureSettingSwitchPreference
+            android:key="advanced_reboot_secured"
+            android:title="@string/advanced_reboot_secured_title"
+            android:summary="@string/advanced_reboot_secured_summary"
+            android:dependency="advanced_reboot"
+            android:defaultValue="true" />
+    </PreferenceCategory>
 </PreferenceScreen>
