OneUI-like settings actionbar [3/3]
todo: add settings observer so you won't need to restart settings app to toggle it

xawlw:
Disabled by default

Signed-off-by: 00day0 <therandomuser11@gmail.com>
Change-Id: I10c16c5535bd86841ac51a655b173df7b79aaf6b

--- a/res/xml/blissify_misc.xml
+++ b/res/xml/blissify_misc.xml
@@ -41,6 +41,18 @@
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="oneui_actionbar"
+        android:icon="@drawable/ic_items"
+        android:title="@string/enable_oneui">
+
+    <com.bliss.support.preferences.SystemSettingSwitchPreference
+         android:key="settings_spacer"
+         android:title="@string/enable_oneui"
+         android:summary="@string/enable_oneui_summary"
+         android:defaultValue="false" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="suspend_actions"
         android:icon="@drawable/ic_screen_off"
         android:title="@string/screen_state_toggles_title">
