--- a/res/xml/blissify_qs.xml
+++ b/res/xml/blissify_qs.xml
@@ -191,13 +191,20 @@
         android:title="@string/battery_options"
         android:icon="@drawable/ic_battery_bar">
 
-        <!-- Battery mode -->
+        <!-- Battery percent -->
         <com.bliss.support.preferences.SystemSettingListPreference
-            android:key="qs_battery_mode"
+            android:key="qs_show_battery_percent"
             android:title="@string/battery_percentage_title"
-            android:entries="@array/qs_battery_mode_entries"
-            android:entryValues="@array/qs_battery_mode_values"
-            android:defaultValue="1" />
+            android:entries="@array/battery_percentage_entries"
+            android:entryValues="@array/battery_percentage_values"
+            android:defaultValue="2" />
+
+        <!-- Battery estimate -->
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="qs_show_battery_estimate"
+            android:icon="@drawable/ic_timelapse"
+            android:title="@string/battery_estimate_title"
+            android:summary="@string/battery_estimate_summary" />
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="bluetooth_qs_show_battery"
