Add toggle to display battery in quick status bar [2/2]
Change-Id: Ia3c990607baa684ae1bac442381bbde30e444dcd
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -969,4 +969,10 @@
     <string name="footer_text_string_title">Customize footer text</string>
     <string name="footer_text_string_summary">Set to empty for default #BlissRoms</string> 
 
+    <!-- QS battery -->
+    <string name="qs_battery_location_title">Battery location</string>
+    <string name="qs_battery_location_qs_panel">QS Panel</string>
+    <string name="qs_battery_location_qs_statusbar">Quick Statusbar</string>
+    <string name="qs_use_status_bar_battery_style">Follow status bar style</string>
+
 </resources>
