Blissify: Notch friendly Battery bar
* Battery bar has only one position i.e: top of statusbar, and with notch devices its just useless
* Enable if Notch is hidden

Change-Id: I9ed8e25a36742dd9b6b095f615433d8fdc1925f7

--- a/res/xml/blissify_statusbar.xml
+++ b/res/xml/blissify_statusbar.xml
@@ -83,6 +83,13 @@
             android:entryValues="@array/text_charging_symbol_values"
             android:defaultValue="0" />
 
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="batterybar_key"
+        android:icon="@drawable/ic_battery_bar"
+        android:title="@string/battery_bar_title">
+
         <Preference
             android:key="batterybar_settings"
             android:title="@string/battery_bar_title"
