--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -990,4 +990,8 @@
     <string name="fod_icon_picker_title">FOD icon picker</string>
     <string name="fod_icon_picker_summary">Pick your favourite fingerprint icon</string>
 
+    <!-- FOD icon use wallpaper color -->
+    <string name="fod_wallpaper_color">Use wallpaper color for FOD icon</string>
+    <string name="fod_wallpaper_color_summary">Uses adjusted primary wallpaper color for FOD icon\nNOTE: might look good only with some wallpapers</string>
+
 </resources>
