--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -59,6 +59,11 @@
             android:summary="@string/fod_icon_picker_summary"
             android:fragment="com.blissroms.blissify.fragments.lockscreen.FODIconPickerFragment" />
 
+        <com.bliss.support.preferences.SystemSettingSwitchPreference
+            android:key="fod_icon_wallpaper_color"
+            android:title="@string/fod_wallpaper_color"
+            android:summary="@string/fod_wallpaper_color_summary"
+            android:defaultValue="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
