Add option to select VoLTE icon [2/2]
Adapt to Bliss and use a list preference instead of a seekbar

Change-Id: I589eeee73a65687490161f924aee6a0af876e8b0

--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -916,4 +916,25 @@
         <item>1</item>
     </string-array>
 
+    <!-- StatusBar volte settings -->
+    <string-array name="status_bar_volte_entries" translatable="false">
+        <item>@string/status_bar_volte_disabled</item>
+        <item>@string/status_bar_volte_style_1</item>
+        <item>@string/status_bar_volte_style_2</item>
+        <item>@string/status_bar_volte_style_3</item>
+        <item>@string/status_bar_volte_style_4</item>
+        <item>@string/status_bar_volte_style_5</item>
+        <item>@string/status_bar_volte_style_6</item>
+    </string-array>
+
+    <string-array name="status_bar_volte_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+    </string-array>
+
 </resources>
