--- a/res/xml/statusbar_advanced_icons.xml
+++ b/res/xml/statusbar_advanced_icons.xml
@@ -85,12 +85,14 @@
         android:icon="@drawable/ic_statusbar_icons"
         android:title="@string/system_icons_category" >
 
-        <com.bliss.support.preferences.SystemSettingSwitchPreference
-            android:key="show_volte_icon"
+       <com.bliss.support.preferences.SystemSettingListPreference
+            android:key="volte_icon_style"
             android:icon="@drawable/ic_volte"
             android:title="@string/volte_icon_title"
-            android:summary="@string/volte_icon_summary"
-            android:defaultValue="false"/>
+            android:entries="@array/status_bar_volte_entries"
+            android:entryValues="@array/status_bar_volte_values"
+            android:summary="%s"
+            android:defaultValue="0"/>
 
         <com.bliss.support.preferences.SystemSettingSwitchPreference
             android:key="use_old_mobiletype"
