--- a/res/values/bliss_arrays.xml
+++ b/res/values/bliss_arrays.xml
@@ -941,4 +941,33 @@
         <item>8</item>
     </string-array>
 
+    <!-- Lockscreen clock styles -->
+    <string-array name="lockscreen_clock_selection_entries" translatable="false">
+        <item>@string/lockscreen_clock_selection_hidden</item>
+        <item>@string/lockscreen_clock_selection_digital</item>
+        <item>@string/lockscreen_clock_selection_digital_bold</item>
+        <item>@string/lockscreen_clock_selection_digital_small</item>
+        <item>@string/lockscreen_clock_selection_digital_accent</item>
+        <item>@string/lockscreen_clock_selection_digital_accent_hour</item>
+        <item>@string/lockscreen_clock_selection_digital_accent_min</item>
+        <item>@string/lockscreen_clock_selection_sammy</item>
+        <item>@string/lockscreen_clock_selection_sammy_bold</item>
+        <item>@string/lockscreen_clock_selection_sammy_accent</item>
+        <item>@string/lockscreen_clock_selection_sammy_accent_alt</item>
+    </string-array>
+
+    <string-array name="lockscreen_clock_selection_values" translatable="false">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+        <item>11</item>
+    </string-array>
+
 </resources>
