Lockscreen Clock Font Size [2/2]
Change-Id: I8b31179a9ee299d462e7089a1f032a7176170c54

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1144,5 +1144,6 @@
 
     <!-- Lockscreen clock font size -->
     <string name="lock_date_font_size_title">Date font size</string>
+    <string name="clock_font_size_title">Clock font size</string>
 
 </resources>
