Lockscreen Clock Font Size [1/2]
Change-Id: I8b31179a9ee299d462e7089a1f032a7176170c54

--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1042,4 +1042,7 @@
     <string name="font_notoserif_bold_italic">NotoSerif Bold Italic</string>
     <string name="font_size_title">Font size</string>
 
+    <!-- Lockscreen clock font size -->
+    <string name="clock_font_size_title">Clock font size</string>
+
 </resources>
