--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -197,6 +197,15 @@
             android:entryValues="@array/font_style_values"
             android:defaultValue="14" />
 
+        <com.bliss.support.preferences.CustomSeekBarPreference
+            android:key="clock_font_size"
+            android:title="@string/clock_font_size_title"
+            android:max="101"
+            settings:min="54"
+            settings:units="dp"
+            android:persistent="false"
+            android:defaultValue="54" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
