Lockscreen Clock Font Size [2/2]
Change-Id: I8b31179a9ee299d462e7089a1f032a7176170c54

--- a/res/xml/blissify_lockscreen.xml
+++ b/res/xml/blissify_lockscreen.xml
@@ -197,6 +197,14 @@
             android:entryValues="@array/font_style_values"
             android:defaultValue="14" />
 
+        <com.bliss.support.preferences.SystemSettingSeekBarPreference
+            android:key="clock_font_size"
+            android:title="@string/clock_font_size_title"
+            android:max="101"
+            android:min="54"
+            settings:units="dp"
+            android:defaultValue="54" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
