--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1141,4 +1141,7 @@
     <string name="qs_system_info_gpu_clock">GPU frequency</string>
     <string name="qs_system_info_gpu_busy">GPU utilization</string>
 
+    <!-- Lockscreen clock font size -->
+    <string name="clock_font_size_title">Clock font size</string>
+
 </resources>
