--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -1042,4 +1042,14 @@
     <string name="font_notoserif_bold_italic">NotoSerif Bold Italic</string>
     <string name="font_size_title">Font size</string>
 
+    <!-- QS themes -->
+    <string name="qs_themes_category_title">QS Themes</string>
+    <string name="qs_panel_color_title">QS Panel color</string>
+    <string name="qs_bg_wall_title">Use Wallpaper colors</string>
+    <string name="qs_bg_wall_summary">Set QS background color from Wallpaper</string>
+    <string name="qs_bg_use_fw">Use default colors</string>
+    <string name="qs_bg_use_fw_summary">Disable custom QS styles for external theme engines</string>
+    <string name="qs_bg_accent_title">Use Accent color</string>
+    <string name="qs_bg_accent_summary">Set QS background color from System Accent</string>
+
 </resources>
