--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -760,6 +760,7 @@
     <string name="qs_rows_landscape_title">Tiles rows on landscape</string>
     <string name="qs_columns_portrait_title">Tiles columns on portrait</string>
     <string name="qs_columns_landscape_title">Tiles columns on landscape</string>
+    <string name="sysui_qqs_count_title">Columns (Quickbar)</string>
 
     <!-- Gaming mode -->
     <string name="gaming_mode_title">Gaming mode</string>
