--- a/res/values/bliss_bools.xml
+++ b/res/values/bliss_bools.xml
@@ -21,4 +21,6 @@
     <!-- Whether to display aware category -->
     <bool name="has_aware">false</bool>
 
+    <!-- Whether to display active edge category -->
+    <bool name="has_active_edge">false</bool>
 </resources>
