Blissify: Hide ticker settings for notch devices
Change-Id: Iffa0b9fae49752f69adc13cc13bbbaecc2dd2ac6

--- a/res/xml/blissify_notifications.xml
+++ b/res/xml/blissify_notifications.xml
@@ -161,6 +161,11 @@
         android:defaultValue="3000"
         settings:units="@string/unit_milliseconds" />
 
+    <Preference
+        android:key="ticker_warning"
+        android:selectable="false"
+        android:summary="@string/ticker_screen_footer" />
+
     </PreferenceCategory>
 
     <!-- Lockscreen Notificatios -->
